// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots match 1`] = `
<div
  className="src-shared-components-ScalableRect-style___container___yobLqv"
  style={
    Object {
      "paddingBottom": "100%",
    }
  }
>
  <div
    className="src-shared-components-ScalableRect-style___wrapper___1sONf7"
  >
    CONTENT
  </div>
</div>
`;

exports[`Snapshots match 2`] = `
<div
  className="CLASS_NAME"
>
  <div
    className="src-shared-components-ScalableRect-style___container___yobLqv"
    style={
      Object {
        "paddingBottom": "100%",
      }
    }
  >
    <div
      className="src-shared-components-ScalableRect-style___wrapper___1sONf7"
    >
      CONTENT
    </div>
  </div>
</div>
`;
